<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".memo.ui.ScoreBoard">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:minHeight="50dp"
    android:background="@color/colorPrimary"
    android:id="@+id/lytScrollDetail"
    android:layout_marginBottom="10dp"
    android:layout_alignParentTop="true"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_weight="0.85"
        android:text="@string/user_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/game_type"
        android:textColor="@color/doColorWhite"
        android:textStyle="bold"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_size"
        android:textStyle="bold"
        android:textColor="@color/doColorWhite"
        android:textSize="12sp"
        android:layout_weight="0.9"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/score"
        android:textColor="@color/doColorWhite"
        android:textStyle="bold"
        android:layout_weight="1.1"/>
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lytScrollDetail"
        android:id="@+id/recyclerSCoreBoard"/>
</RelativeLayout>