<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instruction"
        android:text="@string/instruct"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_game"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/new_game"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/solve"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/solve"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:id="@+id/puzzle_container"/>
</LinearLayout>