<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".memo.HomeActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/game_last"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/user_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="16sp"
                tools:text="deneme">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/score"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/text_rounded_v2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/game_type"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spnrGameType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:entries="@array/gameType"
                android:padding="5dp"
                android:prompt="@string/gameType"
                android:textSize="16sp">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/game_size"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spnrGameSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:entries="@array/gameSizeOf"
                android:padding="5dp"
                android:prompt="@string/gameSizeOf"
                android:textSize="16sp">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:hint="@string/user_name"
                android:padding="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/text_rounded_v2"
                android:padding="5dp"
                android:text="@string/play" />

            <Button
                android:id="@+id/btnScoreBoard"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_rounded_v2"
                android:padding="5dp"
                android:text="@string/score_table" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

    </LinearLayout>
</LinearLayout>